# nel_cvs

./: .gitignore  acinclude.m4
nel/: AUTHORS  CHANGES  INSTALL  Jamfile  Jamrules  Makefile.am  NEWS  README  THANKS  acconfig.h  acinclude.m4  bootstrap  configure.ac  nel-config.in  nel.dsw  nel.sln  nel_8.sln
nel/doc/: coding.dxt  logging.dxt  make_nel_dox.bat  nel.dox  nel.dxt  nel_samples.dxt  project.dxt  rykol.dxx  whitepaper.dxt
nel/doc/3d/: 3d.dxt  3d.dxx  3d_data.dxt  3d_overview.dxt  font.dxt  font.vsd
nel/doc/ai/: ai.dxt  ai.dxx
nel/doc/db/: db.dxt
nel/doc/misc/: event_pump.vsd  events.dxt  misc.dxt  misc.dxx
nel/doc/net/: login_system.dxt  login_system.vsd  login_system_old.dxt  message_recorder.dxt  nel_net_uml.dxt  nelnet-layer1-explained.dxt  nelnet.dxt  net.dxt  new_services.dxt  service.dxt  services.dxt  time.dxt
nel/doc/python/: python.dxt  python.dxx
nel/doc/sound/: nelsound.dxt
nel/doc/sys/: sys.dxt
nel/include/: Makefile.am  application.h  debug.h  log.h
nel/include/nel/: 3d.h  Makefile.am  ai.h  database.h  db.h  ia.h  misc.h  nel.h  net.h  network.h  python.h  sys.h
nel/samples/: Jamfile  Makefile.am
nel/samples/3d/: Makefile.am
nel/samples/georges/: Makefile.am
nel/samples/net/: Makefile.am
nel/samples/pacs/: Pacs sample.dsp  main.cpp  object.cpp  object.h
nel/samples/sound_sources/: main.cpp  sample_sounds.nss  sound_sources.dsp
nel/src/: 3d.dsp  3d.vcproj  3d_8.vcproj  Jamfile  Makefile.am  ai.dsp  ai.dsw  ai.sln  ai.vcproj  ai_lib.dsp  ainimat.dsp  applicationdata.h  applicationwin.cpp  console.cpp  device.cpp  device.h  devicewindow.cpp  georges.dsp  georges.vcproj  georges_8.vcproj  ia.dsp  inputdevice.cpp  inputdevice.h  ligo.dsp  ligo.vcproj  ligo_8.vcproj  logic.dsp  logic.vcproj  logic_8.vcproj  memory.dsp  memory.vcproj  memory_8.vcproj  misc.dsp  misc.vcproj  misc_8.vcproj  myapplication.cpp  nel.dsp  nel.vcproj  net.dsp  net.vcproj  (+9 more)
nel/src/3d/: Makefile  Makefile.am  aabbox.cpp  anim_ctrl.cpp  anim_detail_trav.cpp  anim_detail_trav.h  animatable.cpp  animatable.h  animated_lightmap.cpp  animated_lightmap.h  animated_material.cpp  animated_material.h  animated_morph.cpp  animated_morph.h  animated_value.cpp  animated_value.h  animation.cpp  animation.h  animation_optimizer.cpp  animation_optimizer.h  animation_playlist.cpp  animation_playlist.h  animation_set.cpp  animation_set.h  animation_set_user.cpp  animation_set_user.h  animation_time.cpp  async_file_manager.cpp  async_file_manager.h  async_file_manager_3d.cpp  async_file_manager_3d.h  async_texture_block.cpp  async_texture_block.h  async_texture_manager.cpp  async_texture_manager.h  base_anim_detail_obs.cpp  base_anim_detail_obs.h  base_clip_obs.cpp  base_clip_obs.h  base_light_obs.cpp  (+623 more)
nel/src/ai/: Makefile.am  agent_init.cpp  ai.cpp  ai.dsp  ia.cpp  static_def_init.cpp
nel/src/georges/: Makefile.am  form.cpp  form.h  form_body_elt.cpp  form_body_elt_atom.cpp  form_body_elt_list.cpp  form_body_elt_struct.cpp  form_dfn.cpp  form_dfn.h  form_elm.cpp  form_elm.h  form_file.cpp  form_head.cpp  form_loader.cpp  form_loader.h  georges_loader.cpp  header.cpp  header.h  item.cpp  item_elt.cpp  item_elt_atom.cpp  item_elt_list.cpp  item_elt_struct.cpp  item_loader.cpp  load_form.cpp  loader.cpp  mold_elt.cpp  mold_elt_define.cpp  mold_elt_define_list.cpp  mold_elt_type.cpp  mold_elt_type_list.cpp  mold_loader.cpp  sheet_id.cpp  stdgeorges.cpp  stdgeorges.h  string_ex.cpp  type.cpp  type.h  type_unit.cpp  type_unit_double.cpp  (+4 more)
nel/src/ligo/: Makefile.am  export.cpp  export.h  ligo_config.cpp  ligo_config.h  ligo_error.cpp  ligo_error.h  ligo_material.cpp  ligo_material.h  material.cpp  material.h  primitive.cpp  primitive_class.cpp  primitive_configuration.cpp  primitive_utils.cpp  transition.cpp  transition.h  zone_bank.cpp  zone_bank.h  zone_edge.cpp  zone_edge.h  zone_region.cpp  zone_region.h  zone_template.cpp  zone_template.h
nel/src/logic/: logic_condition.cpp  logic_event.cpp  logic_state.cpp  logic_state_machine.cpp  logic_variable.cpp
nel/src/memory/: Makefile.am  heap_allocator.cpp  heap_allocator.h  heap_allocator_inline.h  memory.cpp  memory_common.h  memory_config.h  memory_manager.cpp  memory_mutex.cpp  memory_mutex.h  memory_tds.cpp  memory_tds.h
nel/src/misc/: Jamfile  Makefile.am  aabbox.cpp  algo.cpp  app_context.cpp  async_file_manager.cpp  big_file.cpp  bit_mem_stream.cpp  bit_set.cpp  bitmap.cpp  bitmap_png.cpp  block_memory.cpp  bsphere.cpp  (+116 more)
nel/tools/: Makefile.am  all.sln
nelns/: AUTHORS  ChangeLog  HOWTO  INSTALL  Makefile.am  THANKS  acconfig.h  acinclude.m4  bootstrap  configure.ac  configure.in  services.dsw  services.sln
nelns/admin_executor_service/: Makefile.am  admin_executor_service.cfg  admin_executor_service.cpp  admin_executor_service.dsp  admin_executor_service.vcproj  log_report.cpp  log_report.h  sysload.cpp  sysload.h  sysmem.cpp  sysmem.h  sysswap.cpp  sysswap.h
nelns/admin_service/: Makefile.am  admin_service.cfg  admin_service.cpp  admin_service.dsp  admin_service.h  admin_service.vcproj  common.cfg  connection_web.cpp  connection_web.h
nelns/doc/: make_server_dox.bat  server.dox  server.dxt
nelns/login_service/: Makefile  Makefile.am  connection_client.cpp  connection_client.h  connection_web.cpp  connection_web.h  connection_ws.cpp  connection_ws.h  login_service.cfg  login_service.cpp  login_service.dsp  login_service.h  login_service.udb  login_service.vcproj  login_service_database.cfg
nelns/naming_service/: Makefile.am  naming_service.cfg  naming_service.cpp  naming_service.dsp  naming_service.h  naming_service.vcproj
nelns/welcome_service/: Makefile.am  welcome_service.cfg  welcome_service.cpp  welcome_service.dsp  welcome_service.h  welcome_service.vcproj  welcome_service_itf.cpp  welcome_service_itf.h
snowballs2/: AUTHORS  INSTALL  Makefile.am  NEWS  README  THANKS  acinclude.m4  configure.in  snowballs2.dsw  snowballs2.sln
snowballs2/client/: Makefile.am  bootstrap  client.cfg  client.cfg.in  client.dsp  client.vcproj  configure.in
snowballs2/server/: Makefile.am  services.dsw
(+2903 files in other folders)
