#
# $Id: Makefile.am,v 1.1 2001/07/11 15:17:40 legros Exp $
#

MAINTAINERCLEANFILES = Makefile.in configure config.guess missing \
                       config.sub ltconfig aclocal.m4 config.h.in \
                       install-sh mkinstalldirs

SUBDIRS              = client server


dist-hook:
	cp -pr $(srcdir)/bootstrap $(distdir)


# End of Makefile.am

