#
# $Id: Makefile.am,v 1.2 2001/07/19 15:26:41 valignat Exp $
#

MAINTAINERCLEANFILES = Makefile.in configure config.guess missing \
                       config.sub ltconfig aclocal.m4 config.h.in \
                       install-sh mkinstalldirs

SUBDIRS              = @SNO_SUBDIRS@


dist-hook:
	cp -pr $(srcdir)/bootstrap $(distdir)


# End of Makefile.am

