#
# $Id: Makefile.am,v 1.3 2002/03/19 17:42:49 valignat Exp $
#

MAINTAINERCLEANFILES = Makefile.in configure config.guess missing \
                       config.sub ltconfig aclocal.m4 config.h.in \
                       install-sh mkinstalldirs

EXTRA_DIST	     = acconfig.h bootstrap \
		       snowballs2.dsw

DIST_SUBDIRS	     = client server

SUBDIRS              = @SNO_SUBDIRS@

# End of Makefile.am
